--- a/Exercise 8/a.css
+++ b/Exercise 8/a.css
@@ -154,9 +154,9 @@ nav button {
 
 .secImg video {
   position: absolute;
-  right: 40px;
-  top: 68px;
-  width: 400px;
+  right: 60px;
+  top: 100px;
+  width: 380px;
 }
 
 section.first > div {
@@ -267,6 +267,13 @@ footer .questions {
   margin: 30px;
 }
 
+.vid2{
+      position: absolute;
+    right: 90px;
+    top: 69px;
+    width: 320px;
+}
+
 @media screen and (max-width: 1300px) {
   .first {
     flex-wrap: wrap;
@@ -281,3 +288,82 @@ footer .questions {
     gap: 30px;
   }
 }
+
+
+/* @media screen and (max-width: 1300px) {
+
+    nav{
+        max-width: 90vw;
+    }
+
+    .first {
+        flex-wrap: wrap;
+    }
+
+    .secImg img {
+        width: 305px;
+    }
+
+    .secImg video {
+        width: 305px;
+    }
+
+    .hero> :nth-child(1) {
+        font-size: 32px;
+    }
+
+    .hero> :nth-child(2) {
+        font-size: 18px;
+    }
+
+    .hero> :nth-child(3) {
+        font-size: 18px;
+    }
+
+    .hero-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .faq h2 {
+        text-align: center;
+        font-size: 32px;
+    }
+
+    footer {
+        max-width: 90vw;
+        padding: 75px 0;
+    }
+
+    .footer-item{
+        align-items: center;
+    }
+ 
+
+}
+
+
+
+@media screen and (max-width: 1300px) {
+
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 25px;
+    }
+}
+
+
+.footer a {
+    font-size: 14px;
+    color: white;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+} */
